@@ -9,6 +9,10 @@ For more detailed instructions on filling in the ChangeLog form, see
 *******************************************************************************
 post-6.0 release changes:
 
+2001-05-22  Charles A. Cox  <cox@pie>
+
+	* cl/src/eli/fi-basic-lep.el: use emacs-mule encoding.  bug10686
+
 2001-01-05  Kevin Layer  <layer@ultra>
 
 	* fi-subproc.el: add subprocess filter for tcp buffers, too (so
